--- a/main.html
+++ b/main.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
 
@@ -8,11 +9,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <h1>Time and Space Complexity</h1>
-	<hr>
-	<p>So, the time complexity is the number of operations an algorithm performs to complete its task (considering that each operation takes the same amount of time). The algorithm that performs the task in the smallest number of operations is considered the most efficient one in terms of the time complexity.</p>
-     <p><b>Space complexity</b> is a parallel concept to time complexity. If we need to create an array of size n, this will require O(n) space. If we create a two-dimensional array of size n*n, this will require O(n2) space.<p>
-		 <hr>
+	<h1>Time, Space, Complexity</h1>
+	<p>Time complexity, efficient</p>
+	<p><B>Space Complexity, O(n)</B></p>
+    <script type="text/javascript" src="./script.js">
+</script>
+
 </body>
 
 </html>
